# add_swebench_to_MASArena

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_benchmark.sh  sitemap.xml
.github/workflows/: doc.yml  test.yml
aflow_optimize/: index.html
data/: SWE-bench-Lite-dev.jsonl  SWE-bench-Lite-test.jsonl  aime_aime2025-i_test.jsonl  aime_aime2025-ii_test.jsonl  aime_test.jsonl  bbh_test.jsonl  drop_raw.jsonl  drop_test.jsonl  drop_validate.jsonl  gaia_test.jsonl  gsm8k_test.jsonl  gsm8k_validate.jsonl  hotpotqa_validate.jsonl  humaneval_public_test.jsonl  humaneval_test.jsonl  humaneval_validate.jsonl  ifeval_test.jsonl  math_test.jsonl  math_validate.jsonl  mbpp_public_test.jsonl  mbpp_test.jsonl  mbpp_validate.jsonl  mmlu_pro_test.jsonl  mmlu_pro_validation.jsonl  model_data.py  musique_test.jsonl  operator.json  swebench_lite_dev.jsonl
data/bbh/: boolean_expressions.jsonl  causal_judgement.jsonl  date_understanding.jsonl  disambiguation_qa.jsonl  dyck_languages.jsonl  formal_fallacies.jsonl  geometric_shapes.jsonl  hyperbaton.jsonl  logical_deduction_five_objects.jsonl  logical_deduction_seven_objects.jsonl  logical_deduction_three_objects.jsonl  movie_recommendation.jsonl  (+15 more)
docs/: aflow_optimize.md  extending.md  index.md  roadmap.md  supported.md  system_overview.md
extending/: index.html
failure_attribution/: index.html
mas_arena/: __init__.py  benchmark_runner.py
roadmap/: index.html
search/: search_index.json
supported/: index.html
system_overview/: index.html
tests/: __init__.py  conftest.py  test_agents.py  test_benchmark_runner.py  test_evaluators.py
(+196 files in other folders)
